--- a/build.xml
+++ b/build.xml
@@ -8,18 +8,16 @@
 
   <target name="clean">
     <delete dir="./public" />
-    <delete dir="./www" />
   </target>
 
   <target name="init">
     <mkdir dir="./public" />
-    <mkdir dir="./www" />
   </target>
 
   <!-- overwrite="true" -->
   <target name="copy-to-public">
     <copy todir="./public" includeEmptyDirs="false">
-      <fileset dir="./src" excludes="**/*.html,**/*.css,**/script.js,**/emojis.js"/>
+      <fileset dir="./src" excludes="**/*.html,style.css,**/script.js,github-api.js,ReposCommon.js,ReposSummary.js,**/emojis.js"/>
     </copy>
   </target>
 
@@ -40,12 +38,14 @@
       <arg line="./src/index.html"/>
     </exec>
     <exec dir="." executable="cmd" >
-      <arg line="/c cleancss ./src/style.css ./src/assets/bootstrap.min.css -o ./public/style.css"/>
+      <arg line="/c cleancss ./src/style.css -o ./public/style.css"/>
     </exec>
     <exec dir="." executable="cmd" >
       <arg line="/c npx google-closure-compiler"/>
       <arg line="--charset UTF-8"/>
-      <arg line="--compilation_level SIMPLE_OPTIMIZATIONS"/><!-- ADVANCED_OPTIMIZATIONS, SIMPLE_OPTIMIZATIONS, WHITESPACE_ONLY-->
+      <arg line="--compilation_level WHITESPACE_ONLY"/><!-- ADVANCED_OPTIMIZATIONS, SIMPLE_OPTIMIZATIONS, WHITESPACE_ONLY-->
+      <arg line="--js ./src/assets/ReposCommon.js"/>
+      <arg line="--js ./src/assets/ReposSummary.js"/>
       <arg line="--js ./src/assets/github-api.js"/>
       <arg line="--js ./src/script.js"/>
       <arg line="--js_output_file ./public/script.js"/>
